# vuln-ai-triage-lab

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  mlflow.db  pyproject.toml  requirements-advanced.txt  requirements.txt  sitemap.xml
app/: cli.py  main.py  pipeline.py  schemas.py
data/: callgraph_routes.json  eval_labeled_findings.json  full_benchmark_expected.json  sample_dast_findings.json  sample_findings_all.json  sample_sast_findings.json  sample_sca_findings.json  threat_intel_signals.json
demo-vulnerable-app/: Dockerfile  README.md  app.py  demo.db  requirements.txt
doc/: run_instructions.md  updates_v1_to_v2.md  updates_v2_to_v3.md  updates_v3_to_v4.md  updates_v4_to_v5.md  updates_v5_to_v6.md  updates_v6_to_v7.md  v1.0_explanation.md  v2.0_explanation.md  v3.0_explanation.md  v4.0_explanation.md  v6.0_explanation.md  v7.0_explanation.md  vuln_ai_triage_lab_v1_to_v5_journey.md
docs/: doc_v5_explanation.md
models/: cwe_tfidf_logreg.joblib
output/: api_human_feedback.jsonl  api_vulnerability_memory.sqlite  batch_report.md  cwe_training_augmented_from_feedback.jsonl  cwe_training_metrics.json  dashboard_memory.sqlite  dashboard_report.md  eval_ml.json  eval_rules.json  full_benchmark_memory.sqlite  full_benchmark_report_ml.md  memory.json  results_ml.json  scanner_findings_all.json  semgrep_findings.json  semgrep_raw.json  v3_memory.sqlite  v3_report.md  v3_results.json  v4_memory.sqlite  v4_memory_ml.sqlite  v4_report.md  v4_results.json  v4_results_ml.json  v5_audit_log.jsonl  v5_combined_benchmark.json  v5_memory.sqlite  (+8 more)
(+97 files in other folders)
