[project]
name = "vuln-ai-triage-lab"
version = "0.1.0"
description = "Runnable MVP for AI-assisted AppSec vulnerability triage"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
