[project]
name = "vuln-ai-triage-lab"
version = "0.3.0"
description = "v3 AppSec AI triage lab with ML, vector memory, optional LLM, feedback, and WAF policy gates"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
